--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chai": "^4.3.4",
     "concurrently": "^6.4.0",
     "express": "^4.17.1",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "node-fetch": "^3.1.0"
   },
   "type": "module",
   "devDependencies": {
