--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "client-install": "cd client && npm install",
     "start": " node server.js",
     "server": "nodemon --exec babel-node server.js",
+    "client": "cd client && npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha"
   },
   "keywords": [],
@@ -24,6 +27,5 @@
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "nodemon": "^2.0.15"
-  },
-  "proxy": "https://localhost:5000"
+  }
 }
