--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "client-install": "cd client && npm install",
-    "start": " node server.js",
-    "server": "nodemon --exec babel-node server.js",
-    "client": "cd client && npm start",
+    "client-install": "cd ../client && npm install",
+    "start": " node src/server.js",
+    "server": "nodemon --exec babel-node src/server.js",
+    "client": "cd ../client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha"
   },
